--- a/index.html
+++ b/index.html
@@ -696,14 +696,14 @@
 
             <ul class="skills-list content-card">
 
-              <li class="skills-item">
+             <li class="skills-item">
 
                 <div class="title-wrapper">
                   <h5 class="h5">Frontend</h5>
                   <data value="90">90%</data>
                 </div>
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%;"></div>
+                  <div class="skill-progress-fill" ><div class="front"></div></div>
                 </div>
               </li>
               
@@ -713,7 +713,7 @@
                   <data value="70">70%</data>
                 </div>
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 70%;"></div>
+                  <div class="skill-progress-fill" ><div class="back"></div></div>
                 </div>
               </li>
 
@@ -725,7 +725,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 80%;"></div>
+                  <div class="skill-progress-fill" ><div class="web"></div></div>
                 </div>
 
               </li>
@@ -738,7 +738,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 70%;"></div>
+                  <div class="skill-progress-fill" ><div class="graph"></div></div>
                 </div>
 
               </li>
@@ -751,7 +751,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 90%;"></div>
+                  <div class="skill-progress-fill" ><div class="brand"></div></div>
                 </div>
 
               </li>
@@ -764,7 +764,7 @@
                 </div>
 
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 50%;"></div>
+                  <div class="skill-progress-fill" ><div class="word"></div></div>
                 </div>
 
               </li>
@@ -775,7 +775,7 @@
                   <data value="60">60%</data>
                 </div>
                 <div class="skill-progress-bg">
-                  <div class="skill-progress-fill" style="width: 60%;"></div>
+                  <div class="skill-progress-fill" ><div class="dev"></div></div>
                 </div>
               </li>
 
